# example-grant-program

./: .pre-commit-config.yaml  .prettierignore
.github/workflows/: backend.yml  frontend.yml  token-dispenser.yml
backend/: .eslintrc  .gitignore  .prettierrc  .swcrc  README.md  jest.config.js  package.json  tsconfig.json
backend/src/: config.ts  index.ts  serve.ts  token-dispenser.ts  token_dispenser.json  types.ts
frontend/: .env.sample  Dockerfile.influxdb  _middleware.js  middleware.js  next-seo.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/claim_sdk/: claim.ts  cu_estimate.ts.txt  eventSubscriber.ts  index.ts  merkleTree.ts  solana.ts  testWallets.ts  treasury.ts
frontend/components/: AirdropEnd.tsx  Box.tsx  BoxTitle.tsx  DiscordButton.tsx  Dropdown.tsx  EcosystemConnectButton.tsx  EcosystemSignButton.tsx  EvmLogo.tsx  Layout.tsx  Modal.tsx  Subscribe.tsx  (+3 more)
scripts/: .env.sample  Dockerfile  influxdb.fixer.ts  influxdb.ts  package-lock.json  package.json  tsconfig.json
token-dispenser/: Anchor.toml  package-lock.json  package.json
token-dispenser/programs/token-dispenser/: Cargo.toml
token-dispenser/programs/token-dispenser/src/: lib.rs  pythnet_sdk_cpy.rs
token-dispenser/programs/token-dispenser/src/ecosystems/: algorand.rs  cosmos.rs  ed25519.rs  mod.rs  secp256k1.rs  solana.rs
token-dispenser/programs/token-dispenser/src/tests/: dispenser_simulator.rs  mod.rs  test_algorand.rs  test_claim.rs  test_cosmos.rs  test_ed25519.rs  test_happy_path.rs  test_initialize.rs  test_merkle_tree.rs  test_secp256k1.rs
(+123 files in other folders)
